# ai-crm

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt  test_redis.py
backend/alembic/: env.py
backend/api/: test.py
backend/app/: factory.py  routes.py
backend/core/: config.py  database.py  logging.py  redis.py  security.py
backend/migrations/: README  env.py  script.py.mako
backend/migrations/versions/: 77d5f1efd82d_add_organization_fields.py  98437afa3f4e_create_auth_tables.py  bdc16d8cbc2d_init_auth_tables.py
backend/models/: __init__.py  organization.py  refresh_token.py  role.py  user.py
backend/repositories/: auth_repository.py  organization_repository.py
backend/routes/: auth.py  organization.py
backend/schemas/: auth.py  organization.py
backend/services/auth/: auth_service.py
backend/services/companies/: organization_service.py
backend/tasks/: csv_tasks.py  test_tasks.py
backend/uploads/: leads.csv
backend/workers/: clear_queue.py  process_csv_job.py  redis_queue.py  tasks.py  test_job.py  worker.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/layouts/: query-provider.tsx
frontend/constants/: app.ts
frontend/services/api/: client.ts
frontend/types/: api.ts
