[project]
name = "ai-crm-backend"
version = "0.1.0"
description = "AI-first CRM backend scaffold"
requires-python = ">=3.11,<3.12"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
